ci(docker): add latest tag to image build

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,4 +21,6 @@ jobs:
         with:
           platforms: linux/arm64,linux/amd64
           push: true
-          tags: 4nm1tsu/nethack-server:${{ github.sha }}
+          tags: |
+            4nm1tsu/nethack-server:${{ github.sha }}
+            4nm1tsu/nethack-server:latest
